--- a/custom_components/youtube_sensor/manifest.json
+++ b/custom_components/youtube_sensor/manifest.json
@@ -2,7 +2,7 @@
   "domain": "youtube_sensor",
   "name": "YouTube Sensor",
   "codeowners": ["@drchiodo"],
-  "config_flow": false,
+  "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/drchiodo/hassio_youtube_sensor",
   "homeassistant": "2021.12.0",
@@ -11,5 +11,5 @@
   "requirements": [
     "python-dateutil"
   ],
-  "version": "1.1.0"
+  "version": "2.0.0"
 }
